<resources>
    <string name="app_name">Hire Me!</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash">SplashActivity</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="qualification">Qualification</string>
    <string name="location">Location</string>

    <string name="register">Register</string>

</resources>
