<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#eaf5f5f5"
    android:layout_height="wrap_content">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  android:paddingBottom="@dimen/activity_vertical_margin"
                  android:paddingLeft="@dimen/activity_horizontal_margin"
                  android:paddingRight="@dimen/activity_horizontal_margin"
                  android:paddingTop="@dimen/activity_vertical_margin"
                  tools:context=".fragments.StudentSignupFragment">

        <com.github.florent37.materialtextfield.MaterialTextField
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="1sp"
            app:mtf_image="@drawable/ic_person_black_24dp"
            app:mtf_labelColor="#110707">

            <EditText

                android:id="@+id/reg_name_stu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView"
                android:layout_toEndOf="@+id/textView"
                android:layout_toRightOf="@+id/textView"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="text"
                android:textColor="#333"/>
        </com.github.florent37.materialtextfield.MaterialTextField>
        <com.github.florent37.materialtextfield.MaterialTextField
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="1sp"
            app:mtf_image="@drawable/ic_email_black_24dp"
            app:mtf_labelColor="#110707">

            <EditText
                android:id="@+id/reg_email_stu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView"
                android:layout_toEndOf="@+id/textView"
                android:layout_toRightOf="@+id/textView"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="#333"/>
        </com.github.florent37.materialtextfield.MaterialTextField>

        <com.github.florent37.materialtextfield.MaterialTextField
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="1sp"
            app:mtf_image="@drawable/ic_lock_outline_black_24dp"
            app:mtf_labelColor="#110707">

            <EditText
                android:textColor="#333"
                android:id="@+id/reg_pass_stu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/com_lg_butn"
                android:layout_alignStart="@+id/com_lg_butn"
                android:layout_centerVertical="true"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"/>
        </com.github.florent37.materialtextfield.MaterialTextField>

        <com.github.florent37.materialtextfield.MaterialTextField
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="1sp"
            app:mtf_image="@drawable/ic_person_add_black_24dp"
            app:mtf_labelColor="#110707">

            <EditText
                android:textColor="#333"
                android:id="@+id/reg_age_stu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/com_lg_butn"
                android:layout_alignStart="@+id/com_lg_butn"
                android:layout_centerVertical="true"
                android:ems="10"
                android:hint="@string/age"
                android:inputType="number"/>
        </com.github.florent37.materialtextfield.MaterialTextField>

        <com.github.florent37.materialtextfield.MaterialTextField
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="1sp"
            app:mtf_image="@drawable/ic_receipt_black_24dp"
            app:mtf_labelColor="#110707">

            <EditText
                android:id="@+id/reg_qual_stu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/com_lg_butn"
                android:layout_alignStart="@+id/com_lg_butn"
                android:layout_centerVertical="true"
                android:ems="10"
                android:textColor="#333"
                android:hint="@string/qualification"
                android:inputType="text"/>
        </com.github.florent37.materialtextfield.MaterialTextField>


        <com.github.florent37.materialtextfield.MaterialTextField
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="1sp"
            app:mtf_image="@drawable/ic_receipt_black_24dp"
            app:mtf_labelColor="#110707">

            <EditText
                android:id="@+id/reg_loc_stu"
                android:textColor="#333"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/com_lg_butn"
                android:layout_alignStart="@+id/com_lg_butn"
                android:layout_centerVertical="true"
                android:ems="10"
                android:hint="@string/location"
                android:inputType="text"/>
        </com.github.florent37.materialtextfield.MaterialTextField>


        <Button

            android:background="@drawable/ripple"
            android:id="@+id/stu_reg_butn"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="14dp"
            android:textColor="@color/white"
            android:text="@string/register"/>

    </LinearLayout>
</ScrollView>