<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/back"
    android:layout_height="match_parent">


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        tools:context="fragments.CreateCompanyProfile"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150sp"
            android:background="@color/orange"
            android:scaleType="centerCrop"
            android:id="@+id/com_img"/>
        <ImageButton
            android:src="@drawable/ic_camera_alt_black_24dp"
            android:background="@color/white"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:id="@+id/get_img"
            android:layout_gravity="end"/>
        <EditText
            android:textColor="@color/black"
            android:id="@+id/name"
            android:layout_marginRight="20sp"
            android:layout_marginLeft="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"/>
        <EditText
            android:textColor="@color/black"
            android:id="@+id/about"
            android:layout_marginTop="12sp"
            android:layout_marginRight="20sp"
            android:layout_marginLeft="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="About Us"/>
        <EditText
            android:textColor="@color/black"
            android:id="@+id/contact"
            android:layout_marginTop="12sp"
            android:layout_marginRight="20sp"
            android:layout_marginLeft="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Contact"/>
        <EditText
            android:textColor="@color/black"
            android:id="@+id/email"
            android:layout_marginTop="12sp"
            android:layout_marginRight="20sp"
            android:layout_marginLeft="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"/>
        <EditText
            android:id="@+id/location"
            android:layout_marginTop="12sp"
            android:layout_marginRight="20sp"
            android:layout_marginLeft="20sp"
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:hint="@string/location"/>
        <Button
            android:id="@+id/done"
            android:layout_marginTop="12sp"
            android:layout_marginLeft="35sp"
            android:layout_marginRight="34sp"
            android:background="@drawable/ripple"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Done"/>
    </LinearLayout>
</ScrollView>